# pumps_rs

./: Cargo.toml  Readme.md
.github/workflows/: test.yaml
examples/: fold.rs  map_state.rs  maze.rs
src/: concurency.rs  concurrency.rs  concurrency_base.rs  execute_futures.rs  filter_map.rs  flatten.rs  lib.rs  map.rs  map_ok.rs  pipeline.rs  pumps.rs  test_utils.rs
src/pumps/: backpressure.rs  backpressure_with_relief_valve.rs  batch.rs  batch_while_with_expiry.rs  catch.rs  enumerate.rs  filter_map.rs  flatten.rs  flatten_iter.rs  map.rs  map_err.rs  map_ok.rs  mod.rs  pump.rs  skip.rs  take.rs
