[package]
name = "pumps"
description = "Eager streams for Rust"
keywords = ["async", "pipeline"]
version = "0.0.4"
edition = "2021"
license-file = "LICENSE-MIT"
homepage = "https://github.com/alexpusch/pumps_rs"
repository = "https://github.com/alexpusch/pumps_rs"
readme = "Readme.md"


[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3.30"